[package]
name = "yarn-lock-parser"
description = "yarn.lock parser"
version = "0.9.0"
authors = [
  "Roberto Huertas <roberto.huertas@outlook.com>",
  "Riccardo Attilio Galli <riccardo@sideralis.org>",
]
edition = "2021"
license = "MIT"
repository = "https://github.com/robertohuertasm/yarn-lock-parser"
readme = "README.md"
keywords = ["yarn", "parser"]
categories = ["parsing"]

exclude = [".github/*", "tests/*"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
nom = "7.1.3"
thiserror = "2.0.4"
